--- a/celebrate/pages/book_mc.html
+++ b/celebrate/pages/book_mc.html
@@ -65,10 +65,12 @@
                 <i class="fas fa-search"></i>
                 <input type="search" name="search" id="search" placeholder="Search...">
             </div>
-            <div class="cart">
-                <div class="badge">9</div>
-                <i class="fas fa-shopping-basket"></i>
-            </div>
+            <a href="mybookings.html" class="cart-link">
+                <div class="cart">
+                    <div class="badge">9</div>
+                    <i class="fas fa-shopping-basket"></i>
+                </div>
+            </a>
             <div class="user">
                 <i class="fas fa-user"></i>
             </div>
@@ -93,7 +95,8 @@
                         <div class="card-body">
                             <h3>MC Njozi</h3>
                             <p>
-                                The one and only who could make your ceremony amazing, vibrating and full of joyous moments, no regret working with me.
+                                The one and only who could make your ceremony amazing, vibrating and full of joyous
+                                moments, no regret working with me.
                             </p>
                             <div class="add-cart-price">
                                 <button class="btn-cart">Select</button>
@@ -109,7 +112,8 @@
                         <div class="card-body">
                             <h3>MC Kwetu</h3>
                             <p>
-                                The one and only who could make your ceremony amazing, vibrating and full of joyous moments, no regret working with me.
+                                The one and only who could make your ceremony amazing, vibrating and full of joyous
+                                moments, no regret working with me.
                             </p>
                             <div class="add-cart-price">
                                 <button class="btn-cart">Select</button>
@@ -125,7 +129,8 @@
                         <div class="card-body">
                             <h3>MC Maeda</h3>
                             <p>
-                                The one and only who could make your ceremony amazing, vibrating and full of joyous moments, no regret working with me.
+                                The one and only who could make your ceremony amazing, vibrating and full of joyous
+                                moments, no regret working with me.
                             </p>
                             <div class="add-cart-price">
                                 <button class="btn-cart">Select</button>
@@ -143,7 +148,8 @@
                         <div class="card-body">
                             <h3>MC Njozi</h3>
                             <p>
-                                The one and only who could make your ceremony amazing, vibrating and full of joyous moments, no regret working with me.
+                                The one and only who could make your ceremony amazing, vibrating and full of joyous
+                                moments, no regret working with me.
                             </p>
                             <div class="add-cart-price">
                                 <button class="btn-cart">Select</button>
@@ -159,7 +165,8 @@
                         <div class="card-body">
                             <h3>MC Kwetu</h3>
                             <p>
-                                The one and only who could make your ceremony amazing, vibrating and full of joyous moments, no regret working with me.
+                                The one and only who could make your ceremony amazing, vibrating and full of joyous
+                                moments, no regret working with me.
                             </p>
                             <div class="add-cart-price">
                                 <button class="btn-cart">Select</button>
@@ -175,7 +182,8 @@
                         <div class="card-body">
                             <h3>MC Maeda</h3>
                             <p>
-                                The one and only who could make your ceremony amazing, vibrating and full of joyous moments, no regret working with me.
+                                The one and only who could make your ceremony amazing, vibrating and full of joyous
+                                moments, no regret working with me.
                             </p>
                             <div class="add-cart-price">
                                 <button class="btn-cart">Select</button>
@@ -193,7 +201,8 @@
                         <div class="card-body">
                             <h3>MC Njozi</h3>
                             <p>
-                                The one and only who could make your ceremony amazing, vibrating and full of joyous moments, no regret working with me.
+                                The one and only who could make your ceremony amazing, vibrating and full of joyous
+                                moments, no regret working with me.
                             </p>
                             <div class="add-cart-price">
                                 <button class="btn-cart">Select</button>
@@ -209,7 +218,8 @@
                         <div class="card-body">
                             <h3>MC Kwetu</h3>
                             <p>
-                                The one and only who could make your ceremony amazing, vibrating and full of joyous moments, no regret working with me.
+                                The one and only who could make your ceremony amazing, vibrating and full of joyous
+                                moments, no regret working with me.
                             </p>
                             <div class="add-cart-price">
                                 <button class="btn-cart">Select</button>
@@ -225,7 +235,8 @@
                         <div class="card-body">
                             <h3>MC Maeda</h3>
                             <p>
-                                The one and only who could make your ceremony amazing, vibrating and full of joyous moments, no regret working with me.
+                                The one and only who could make your ceremony amazing, vibrating and full of joyous
+                                moments, no regret working with me.
                             </p>
                             <div class="add-cart-price">
                                 <button class="btn-cart">Select</button>
