--- a/celebrate/pages/mybookings.html
+++ b/celebrate/pages/mybookings.html
@@ -65,10 +65,12 @@
                 <i class="fas fa-search"></i>
                 <input type="search" name="search" id="search" placeholder="Search...">
             </div>
-            <div class="cart">
-                <div class="badge">9</div>
-                <i class="fas fa-shopping-basket"></i>
-            </div>
+            <a href="mybookings.html" class="cart-link">
+                <div class="cart">
+                    <div class="badge">9</div>
+                    <i class="fas fa-shopping-basket"></i>
+                </div>
+            </a>
             <div class="user">
                 <i class="fas fa-user"></i>
             </div>
@@ -121,7 +123,7 @@
                                 <td>
                                     <div class="booking-btns">
                                         <button class="btn btn-gray btn-update" title="update"><i
-                                                class="fas fa-recycle"></i></button>
+                                                class="fas fa-sync-alt"></i></button>
                                         <button class="btn btn-danger btn-remove" title="remove"><i
                                                 class="fas fa-times-circle"></i></button>
                                     </div>
@@ -139,7 +141,7 @@
                                 <td>
                                     <div class="booking-btns">
                                         <button class="btn btn-gray btn-update" title="update"><i
-                                                class="fas fa-recycle"></i></button>
+                                                class="fas fa-sync-alt"></i></button>
                                         <button class="btn btn-danger btn-remove" title="remove"><i
                                                 class="fas fa-times-circle"></i></button>
                                     </div>
@@ -157,7 +159,7 @@
                                 <td>
                                     <div class="booking-btns">
                                         <button class="btn btn-gray btn-update" title="update"><i
-                                                class="fas fa-recycle"></i></button>
+                                                class="fas fa-sync-alt"></i></button>
                                         <button class="btn btn-danger btn-remove" title="remove"><i
                                                 class="fas fa-times-circle"></i></button>
                                     </div>
