--- a/celebrate/pages/reviews.html
+++ b/celebrate/pages/reviews.html
@@ -65,10 +65,12 @@
                 <i class="fas fa-search"></i>
                 <input type="search" name="search" id="search" placeholder="Search...">
             </div>
-            <div class="cart">
-                <div class="badge">9</div>
-                <i class="fas fa-shopping-basket"></i>
-            </div>
+            <a href="mybookings.html" class="cart-link">
+                <div class="cart">
+                    <div class="badge">9</div>
+                    <i class="fas fa-shopping-basket"></i>
+                </div>
+            </a>
             <div class="user">
                 <i class="fas fa-user"></i>
             </div>
