Beautiful stuff were made here

--- a/celebrate/index.html
+++ b/celebrate/index.html
@@ -82,6 +82,7 @@
                             <input type="email" name="email" id="email" placeholder="Email" required>
                             <input type="password" name="pswd" id="pswd" placeholder="Password" required>
                             <i class="fas fa-eye text-gray"></i>
+                            <i class="fas fa-eye-slash text-gray"></i>
                         </div>
                         <div class="sign-in-up">
                             <input type="submit" name="signin" value="Sign In" class="btn btn-gray" id="sign_in">
@@ -130,7 +131,7 @@
         <!-- MCs -->
         <section id="mcs" class="text-black bg-light">
             <div class="container">
-                <h2 class="display-4 text-center text-primary">Masters of Ceremony</h2>
+                <h2 class="display-4 text-center text-primary">Masters of Ceremony | Categories</h2>
                 <div class="row flex even-columns pt-3 pb-0">
                     <div class="card">
                         <div class="card-img">
