--- a/celebrate/index.html
+++ b/celebrate/index.html
@@ -68,12 +68,42 @@
                 <i class="fas fa-search"></i>
                 <input type="search" name="search" id="search" placeholder="Search...">
             </div>
-            <a href="pages/mybookings.html" class="cart-link">
-                <div class="cart">
+            <div class="cart">
+                <div class="basket-badge">
                     <div class="badge">9</div>
                     <i class="fas fa-shopping-basket"></i>
                 </div>
-            </a>
+                <div class="carts">
+                    <div class="cart-details">
+                        <img src="assets/img/mc/mc1.jpg" alt="" class="cart-img">
+                        <h5>MC Maeda</h5>
+                        <p>
+                            TZS 150,000,00.00
+                        </p>
+                        <i class="fas fa-trash-alt"></i>
+                    </div>
+                    <div class="cart-details">
+                        <img src="assets/img/mc/mc2.jpg" alt="" class="cart-img">
+                        <h5>MC Njozi</h5>
+                        <p>
+                            TZS 340,000,00.00
+                        </p>
+                        <i class="fas fa-trash-alt"></i>
+                    </div>
+                    <div class="cart-details">
+                        <img src="assets/img/mc/mc2.jpg" alt="" class="cart-img">
+                        <h5>MC Njozi</h5>
+                        <p>
+                            TZS 340,000,00.00
+                        </p>
+                        <i class="fas fa-trash-alt"></i>
+                    </div>
+                    <div class="cart-checkout-btns">
+                        <button class="btn btn-gray">View Carts</button>
+                        <button class="btn btn-danger">Checkout</button>
+                    </div>
+                </div>
+            </div>
             <div class="user">
                 <i class="fas fa-user"></i>
                 <div class="user-account">
@@ -85,7 +115,7 @@
                             <i class="fas fa-eye-slash text-gray"></i>
                         </div>
                         <div class="sign-in-up">
-                            <input type="submit" name="signin" value="Sign In" class="btn btn-gray" id="sign_in">
+                            <input type="submit" name="signin" value="Sign In" class="btn btn-primary" id="sign_in">
                             <p class="forgot">
                                 <a href="#">Forgot password?</a>
                             </p>
@@ -140,7 +170,7 @@
                             </div>
                         </div>
                         <div class="card-body">
-                            <h3>MC Njozi</h3>
+                            <h3>Official MCs</h3>
                             <p>
                                 The one and only who could make your ceremony amazing, vibrating and full of joyous
                                 moments, no regret working with me.
@@ -157,7 +187,7 @@
                             </div>
                         </div>
                         <div class="card-body">
-                            <h3>MC Kwetu</h3>
+                            <h3>Casual MCs</h3>
                             <p>
                                 The one and only who could make your ceremony amazing, vibrating and full of joyous
                                 moments, no regret working with me.
@@ -174,7 +204,7 @@
                             </div>
                         </div>
                         <div class="card-body">
-                            <h3>MC Maeda</h3>
+                            <h3>Mixed MCs</h3>
                             <p>
                                 The one and only who could make your ceremony amazing, vibrating and full of joyous
                                 moments, no regret working with me.
