Booking categories added

--- a/celebrate/index.html
+++ b/celebrate/index.html
@@ -70,7 +70,7 @@
             </div>
             <div class="cart">
                 <div class="basket-badge">
-                    <div class="badge">9</div>
+                    <div class="badge">3</div>
                     <i class="fas fa-shopping-basket"></i>
                 </div>
                 <div class="carts">
@@ -121,7 +121,7 @@
                             </p>
                             <a href="" class="btn btn-danger" id="sign_up">Sign Up</a>
                         </div>
-                        <p>Or</p>
+                        <p>Or, Sign In With:</p>
                         <div class="user-social">
                             <a href="#" target="_blank" rel="noopener noreferrer">
                                 <i class="fab fa-facebook"></i>
@@ -148,7 +148,7 @@
                 <div class="row flex even-columns">
                     <div class="hero-text">
                         <h2>Master of Ceremony</h2>
-                        <a href="pages/book_mc.html" class="btn btn-primary">Book Now</a>
+                        <a href="#mcs" class="btn btn-primary">Book Now</a>
                     </div>
                     <div class="hero-img">
                         <img src="assets/img/hero/hero15.svg" alt="" class="img-fluid">
@@ -161,7 +161,7 @@
         <!-- MCs -->
         <section id="mcs" class="text-black bg-light">
             <div class="container">
-                <h2 class="display-4 text-center text-primary">Masters of Ceremony | Categories</h2>
+                <h2 class="display-4 text-center text-primary pt-3">Masters of Ceremony | Categories</h2>
                 <div class="row flex even-columns pt-3 pb-0">
                     <div class="card">
                         <div class="card-img">
@@ -176,7 +176,7 @@
                                 moments, no regret working with me.
                             </p>
                             <div class="add-cart-price">
-                                <button class="btn-cart">Select</button>
+                                <a href="pages/book_mc_official.html" class="btn-cart">Select</a>
                             </div>
                         </div>
                     </div>
@@ -193,7 +193,7 @@
                                 moments, no regret working with me.
                             </p>
                             <div class="add-cart-price">
-                                <button class="btn-cart">Select</button>
+                                <a href="pages/book_mc_casual.html" class="btn-cart">Select</a>
                             </div>
                         </div>
                     </div>
@@ -210,7 +210,7 @@
                                 moments, no regret working with me.
                             </p>
                             <div class="add-cart-price">
-                                <button class="btn-cart">Select</button>
+                                <a href="pages/book_mc_mixed.html" class="btn-cart">Select</a>
                             </div>
                         </div>
                     </div>
