--- a/celebrate/pages/reviews.html
+++ b/celebrate/pages/reviews.html
@@ -65,14 +65,73 @@
                 <i class="fas fa-search"></i>
                 <input type="search" name="search" id="search" placeholder="Search...">
             </div>
-            <a href="mybookings.html" class="cart-link">
-                <div class="cart">
-                    <div class="badge">9</div>
+            <div class="cart">
+                <div class="basket-badge">
+                    <div class="badge">3</div>
                     <i class="fas fa-shopping-basket"></i>
                 </div>
-            </a>
+                <div class="carts">
+                    <div class="cart-details">
+                        <img src="../assets/img/mc/mc1.jpg" alt="" class="cart-img">
+                        <h5>MC Maeda</h5>
+                        <p>
+                            TZS 150,000,00.00
+                        </p>
+                        <i class="fas fa-trash-alt"></i>
+                    </div>
+                    <div class="cart-details">
+                        <img src="../assets/img/mc/mc2.jpg" alt="" class="cart-img">
+                        <h5>MC Njozi</h5>
+                        <p>
+                            TZS 340,000,00.00
+                        </p>
+                        <i class="fas fa-trash-alt"></i>
+                    </div>
+                    <div class="cart-details">
+                        <img src="../assets/img/mc/mc2.jpg" alt="" class="cart-img">
+                        <h5>MC Njozi</h5>
+                        <p>
+                            TZS 340,000,00.00
+                        </p>
+                        <i class="fas fa-trash-alt"></i>
+                    </div>
+                    <div class="cart-checkout-btns">
+                        <button class="btn btn-gray">View Carts</button>
+                        <button class="btn btn-danger">Checkout</button>
+                    </div>
+                </div>
+            </div>
             <div class="user">
                 <i class="fas fa-user"></i>
+                <div class="user-account">
+                    <form action="">
+                        <div class="input-group">
+                            <input type="email" name="email" id="email" placeholder="Email" required>
+                            <input type="password" name="pswd" id="pswd" placeholder="Password" required>
+                            <i class="fas fa-eye text-gray"></i>
+                            <i class="fas fa-eye-slash text-gray"></i>
+                        </div>
+                        <div class="sign-in-up">
+                            <input type="submit" name="signin" value="Sign In" class="btn btn-primary" id="sign_in">
+                            <p class="forgot">
+                                <a href="#">Forgot password?</a>
+                            </p>
+                            <a href="" class="btn btn-danger" id="sign_up">Sign Up</a>
+                        </div>
+                        <p>Or, Sign In With:</p>
+                        <div class="user-social">
+                            <a href="#" target="_blank" rel="noopener noreferrer">
+                                <i class="fab fa-facebook"></i>
+                            </a>
+                            <a href="#" target="_blank" rel="noopener noreferrer">
+                                <i class="fab fa-google"></i>
+                            </a>
+                            <a href="#" target="_blank" rel="noopener noreferrer">
+                                <i class="fab fa-twitter"></i>
+                            </a>
+                        </div>
+                    </form>
+                </div>
             </div>
         </div>
     </nav>
