--- a/celebrate/pages/checkout.html
+++ b/celebrate/pages/checkout.html
@@ -13,7 +13,7 @@
     <!-- Font Awesome Online -->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.1/css/all.min.css" />
     <!-- Main CSS -->
-    <link rel="stylesheet" href="../assets/css/signup.css">
+    <link rel="stylesheet" href="../assets/css/checkout.css">
     <!-- Header-Footer CSS -->
     <link rel="stylesheet" href="../assets/css/header-footer.css">
     <!-- Utilities CSS -->
@@ -97,7 +97,7 @@
                     </div>
                     <div class="cart-checkout-btns">
                         <button class="btn btn-gray">View Carts</button>
-                        <button class="btn btn-danger">Checkout</button>
+                        <a href="checkout.html" class="btn btn-danger">Checkout</a>
                     </div>
                 </div>
             </div>
@@ -143,7 +143,7 @@
         <!-- Sign Up -->
         <section id="sign_up" class="text-black bg-white">
             <div class="container">
-                <div class="row flex even-columns pt-4 pb-0">
+                <div class="row flex even-columns pt-4 pb-0 ">
                     <h2 class="display-4">Checkout</h2>
                 </div>
                 <div class="row flex even-columns pt-1 pb-1">
@@ -161,7 +161,7 @@
                                 </div>
                             </div>
                             <div class="sign-in-up">
-                                <a href="signup.html" class="btn btn-danger" id="sign_up">Sign In</a>
+                                <a href="#" class="btn btn-danger" id="sign_up">Sign In</a>
                             </div>
                             <div class="forgot-social pt-1">
                                 <p class="forgot order-1">
@@ -206,7 +206,7 @@
                                 </div>
                             </div>
                             <div class="sign-in-up">
-                                <a href="signup.html" class="btn btn-primary" id="sign_up">Sign Up</a>
+                                <a href="#" class="btn btn-primary" id="sign_up">Sign Up</a>
                             </div>
                         </form>
                     </div>
@@ -290,7 +290,7 @@
     <script src="../assets/vendors/jquery/jquery.min.js"></script>
     <!-- Main JS -->
     <script src="../assets/js/main.js"></script>
-    <script src="../assets/js/signup.js"></script>
+    <script src="../assets/js/checkout.js"></script>
     <!-- End Scripts -->
 </body>
 
