--- a/celebrate/pages/book_mc_mixed.html
+++ b/celebrate/pages/book_mc_mixed.html
@@ -97,7 +97,7 @@
                     </div>
                     <div class="cart-checkout-btns">
                         <button class="btn btn-gray">View Carts</button>
-                        <button class="btn btn-danger">Checkout</button>
+                        <a href="checkout.html" class="btn btn-danger">Checkout</a>
                     </div>
                 </div>
             </div>
